--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Devon Bobo
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Inspiring Cyber Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/154306718?v=4
